--- a/nowshowing.html
+++ b/nowshowing.html
@@ -10,6 +10,7 @@
             <nav class="navbar">
               <h1>Screen Surfers</h1>
               <ul> 
+                <li><a href="index.html">Home</a></li>
                 <li><a href="nowshowing.html">Now Showing</a></li>
                 <li><a href="bookingpage.html">Booking</a></li>
                 <li><a href="signup.html">Signup</a></li>
